[update] Java 17 -> 21 [update] create/touch command. [optimise] Bean struct